php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26267 gmp_random() leaks memory and does not produce random numbers
Submitted: 2003-11-15 16:06 UTC Modified: 2003-11-18 23:42 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: cunha17 at uol dot com dot br Assigned:
Status: Closed Package: Math related
PHP Version: 4CVS, 5CVS OS: RedHat Linux 9.0
Private report: No CVE-ID: None
 [2003-11-15 16:06 UTC] cunha17 at uol dot com dot br
Description:
------------
The piece of code below leaks memory.

Reproduce code:
---------------
<? $p = gmp_random(1); ?>

Expected result:
----------------
Nothing.

Actual result:
--------------
/usr/src/zend2/php-src/ext/gmp/gmp.c(119) :  Freeing 0x405018B8 (8 bytes), script=-
Last leak repeated 1 time
/usr/src/zend2/php-src/ext/gmp/gmp.c(127) :  Freeing 0x40501878 (8 bytes), script=-
=== Total 3 memory leaks detected ===


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-11-18 23:42 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.

gmp_random() didn't really produce random numbers either.
That is also fixed now.

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 12 08:00:01 2026 UTC