- Fixed bug #26267 (gmp_random() leaks memory and does not produce random numbers) # ..and mpz_random() is obsolete according to the GNU MP manual.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@144579 c90b9560-bf6c-de11-be94-00142212c4b1